@@ -1,3 +1,8 @@
+2004-11-04  MenTaLguY  <mental@rydia.net>
+
+	* src/widgets/layer-selector.cpp: togglable images and formatting
+	  changes (make current layer bold)
+
 2004-11-03  MenTaLguY  <mental@rydia.net>
 
 	* src/widgets/Makefile_insert, src/widgets/shrink-wrap-button.cpp,
